--- a/src/components/style_sheets/sass_hands_on/pokedex.scss
+++ b/src/components/style_sheets/sass_hands_on/pokedex.scss
@@ -1,4 +1,4 @@
-@import '../../assets/scss/colors.scss';
+@import '../../../assets/scss/colors.scss';
 
 @mixin flexBox($direction: row, $justify: flex-start) {
   display: flex;
